basic server for static site

--- a/site/authorization.html
+++ b/site/authorization.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    личный кабинет
-    <p><a href="./shop.html">магазин</a></p>
+    авторизация
+    <p><a href="./shop/index.html">магазин</a></p>
 </body>
 
 </html>
