--- a/site/cart.html
+++ b/site/cart.html
@@ -10,7 +10,7 @@
 
 <body>
     Корзина
-    <p><a href="./shop.html">магазин</a></p>
+    <p><a href="./shop/index.html">магазин</a></p>
 </body>
 
 </html>
