--- a/site/index.html
+++ b/site/index.html
@@ -11,8 +11,8 @@
 <body>
     <p>приветствие</p>
     <p></p>
-    <p><a href="./pages/shop.html">магазин</a></p>
-    <p><a href="./pages/authorization.html">авторизация</a></p>
+    <p><a href="./shop/index.html">магазин</a></p>
+    <p><a href="./authorization.html">авторизация</a></p>
 </body>
 
 </html>
