--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -12,9 +12,9 @@
     <p>Магазин</p>
     <p></p>
     <p><a href="../index.html">главная</a></p>
-    <p><a href="./authorization.html">авторизация</a></p>
-    <p><a href="./cart.html">корзина</a></p>
-    <p><a href="./accaunt.html">личный кабинет</a></p>
+    <p><a href="../authorization.html">авторизация</a></p>
+    <p><a href="../cart.html">корзина</a></p>
+    <p><a href="../accaunt.html">личный кабинет</a></p>
     <p></p>
 
     <img src="../resources/nokia3310-800x800.jpg" alt="">
