--- a/site/accaunt.html
+++ b/site/accaunt.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    авторизация
-    <p><a href="./shop.html">магазин</a></p>
+    личный кабинет
+    <p><a href="./shop/index.html">магазин</a></p>
 </body>
 
 </html>
