--- a/site/accaunt.html
+++ b/site/accaunt.html
@@ -10,7 +10,9 @@
 
 <body>
     личный кабинет
-    <p><a href="./shop/index.html">магазин</a></p>
+    <p>
+        <a href="./shop/index.html">магазин</a>
+    </p>
 </body>
 
 </html>
