--- a/site/index.html
+++ b/site/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
 
-<body>
-    <p>приветствие</p>
-    <p></p>
-    <p><a href="./shop/index.html">магазин</a></p>
-    <p><a href="./authorization.html">авторизация</a></p>
-</body>
+    <body>
+        <p>приветствие</p>
+        <p></p>
+        <p>
+            <a href="./shop/index.html">магазин</a>
+        </p>
+        <p>
+            <a href="./authorization.html">авторизация</a>
+        </p>
+    </body>
 
 </html>
