/src and /site merge

--- a/site/index.html
+++ b/site/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
+<html lang="ru">
 
-    <body>
-        <p>приветствие</p>
-        <p></p>
-        <p>
-            <a href="./shop/index.html">магазин</a>
-        </p>
-        <p>
-            <a href="./authorization.html">авторизация</a>
-        </p>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Основной файл index.html</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <h1>
+        BiteBrigade!
+    </h1>
+    <p>
+        Проект ByteBrigade- интернет магазин электроники,
+        создан в рамках прохождение практики в Хекслет колледже в июне 2023
+    </p>
+    <p></p>
+    <p>
+        <a href="./shop/index.html">магазин</a>
+    </p>
+    <p>
+        <a href="./authorization.html">авторизация</a>
+    </p>
+</body>
 
 </html>
