added shop placeholder

--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -30,12 +30,12 @@
         </nav>
 
         <div class="product-list-container">
-            <div class="product-list-item"></div>
-            <div class="product-list-item"></div>
+            <!-- <div class="product-list-item"></div>
+            <div class="product-list-item"></div> -->
 
         </div>
 
-        <img src="../resources/nokia3310-800x800.jpg" alt="">
+        <!-- <img src="../resources/nokia3310-800x800.jpg" alt=""> -->
         <script src="shop-script.js"></script>
     </body>
 
