added images and brand to card

--- a/site/shop/podutct-card.html
+++ b/site/shop/podutct-card.html
@@ -8,6 +8,8 @@
 
         <div class="info-container">
             <div class="product-name-container">
+
+                <h5 class="product-brand">бренд</h5>
                 <h5 class="product-name">Название</h5>
             </div>
             <div class="product-description-container">
