--- a/site/index.html
+++ b/site/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Основной файл index.html</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Основной файл index.html</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-
-    <body>
-        <h1>
-            BiteBrigade!
-        </h1>
-        <p>
-            Проект ByteBrigade- интернет магазин электроники,
-            создан в рамках прохождение практики в Хекслет колледже в июне 2023
-        </p>
-        <p></p>
-        <p>
-            <a href="./shop/index.html">магазин</a>
-        </p>
-        <p>
-            <a href="./authorization.html">авторизация</a>
-        </p>
-    </body>
-
+  <body>
+    <h1>BiteBrigade!</h1>
+    <p>
+      Проект ByteBrigade- интернет магазин электроники, создан в рамках прохождение практики в
+      Хекслет колледже в июне 2023
+    </p>
+    <p></p>
+    <p>
+      <a href="./shop/index.html">магазин</a>
+    </p>
+    <p>
+      <a href="./authorization/index.html">авторизация</a>
+    </p>
+  </body>
 </html>
