added script ot show/hide elements on login/logout

--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -24,10 +24,10 @@
          <div>
             <a href="../accaunt.html">личный кабинет</a>
          </div>
-         <div>
+         <div class="vsible-when-logged-out">
             <a href="../authorization/index.html">авторизация</a>
          </div>
-         <div>
+         <div class="vsible-when-logged-in">
             <button class="logout-button">выйти</button>
          </div>
       </nav>
