added basic placeholder for cart page

--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../styles.css" />
         <link rel="stylesheet" href="./shop-styles.css" />
+        <link rel="stylesheet" href="./card-styles.css" />
         <title>Document</title>
         <script type="module" src="../common.js"></script>
     </head>
@@ -19,7 +20,7 @@
                 <a href="../index.html">главная</a>
             </div>
             <div>
-                <a href="../cart.html">корзина</a>
+                <a href="../cart/index.html">корзина</a>
             </div>
             <div>
                 <a href="../accaunt.html">личный кабинет</a>
