added GET: /api/user/ route for user info

--- a/site/shop/podutct-card.html
+++ b/site/shop/podutct-card.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="shop-styles.css">
+<link rel="stylesheet" href="shop-styles.css" />
 <body>
     <div class="product-list-item">
         <div class="img-container">
-            <img src="../resources/nokia3310-800x800.jpg" alt="">
+            <img src="../resources/nokia3310-800x800.jpg" alt="" />
         </div>
 
         <div class="info-container">
             <div class="product-name-container">
-
                 <h5 class="product-brand">бренд</h5>
                 <h5 class="product-name">Название</h5>
             </div>
@@ -20,6 +19,5 @@
                 <button class="add-to-cart-button">добавить</button>
             </div>
         </div>
-
     </div>
 </body>
