--- a/site/accaunt.html
+++ b/site/accaunt.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
     </head>
 
@@ -13,7 +12,8 @@
         <p>
             <a href="./shop/index.html">магазин</a>
         </p>
-    </body>
-    <script src="./index.js"></script>
 
+        <div class="user-info"></div>
+    </body>
+    <script src="./acc-script.js"></script>
 </html>
