common functions moved to lib.js

--- a/site/accaunt.html
+++ b/site/accaunt.html
@@ -15,5 +15,5 @@
 
         <div class="user-info"></div>
     </body>
-    <script src="./acc-script.js"></script>
+    <script type="module" src="./acc-script.js"></script>
 </html>
