--- a/site/index.html
+++ b/site/index.html
@@ -8,17 +8,32 @@
   </head>
 
   <body>
-    <h1>BiteBrigade!</h1>
-    <p>
-      Проект ByteBrigade- интернет магазин электроники, создан в рамках прохождение практики в
-      Хекслет колледже в июне 2023
-    </p>
-    <p></p>
-    <p>
-      <a href="./shop/index.html">магазин</a>
-    </p>
-    <p>
-      <a href="./authorization/index.html">авторизация</a>
-    </p>
+    <div class="frame">
+      <h1>Welcome to</h1>
+      <img src="resources/main-logo.png" alt="Логотип магазина">
+      <h2>Один из лидеров рынка по продаже цифровой техники</h2>
+      <div class="red-plate flex-container">
+        <div>
+          <p class="stat">3255</p>
+          <p class="stat-text">Магазинов по всему миру</p>
+        </div>
+        <div>
+          <p class="stat">38497</p>
+          <p class="stat-text">Сотрудников</p>
+        </div>
+        <div>
+          <p class="stat">2175</p>
+          <p class="stat-text">Городов с ByteBrigade</p>
+        </div>
+      </div>
+      <div class="button-container flex-container">
+        <div class="button">
+        <a href="./shop/index.html">магазин</a>
+        </div>
+        <div class="button">
+        <a href="./authorization/index.html">авторизация</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
