--- a/site/index.html
+++ b/site/index.html
@@ -27,12 +27,12 @@
         </div>
       </div>
       <div class="button-container flex-container">
-        <div class="button">
-        <a href="./shop/index.html">магазин</a>
-        </div>
-        <div class="button">
-        <a href="./authorization/index.html">авторизация</a>
-        </div>
+        <a href="./shop/index.html">
+          <div class="button">Магазин</div>
+        </a>
+        <a href="./authorization/index.html">
+          <div class="button">Авторизация</div>
+        </a>
       </div>
     </div>
   </body>
