--- a/site/cart/index.html
+++ b/site/cart/index.html
@@ -21,9 +21,11 @@
                 <div class="price-container">
                     <p class="total-price">цена</p>
                 </div>
-                <div class="buy-button-container">
-                    <button class="buy-button">купить</button>
-                </div>
+                <a href="../thanks/index.html">
+                    <div class="buy-button-container">
+                        <button class="buy-button">купить</button>
+                    </div>
+                </a>
             </div>
         </div>
     </body>
