button links replacede with text

--- a/site/index.html
+++ b/site/index.html
@@ -27,13 +27,16 @@
                 </div>
             </div>
             <div class="button-container flex-container">
-                <div class="button">
-                    <a href="./shop/index.html">магазин</a>
+                <div class="button go-to-shop">
+                    <!-- <a href="./shop/index.html">магазин</a> -->
+                    <p class="button-text">магазин</p>
                 </div>
-                <div class="button">
-                    <a href="./authorization/index.html">авторизация</a>
+                <div class="button go-to-authorization">
+                    <!-- <a href="./authorization/index.html">авторизация</a> -->
+                    <p class="button-text">авторизация</p>
                 </div>
             </div>
         </div>
     </body>
+    <script src="index.js" type="module"></script>
 </html>
