--- a/site/index.html
+++ b/site/index.html
@@ -29,11 +29,13 @@
             <div class="button-container flex-container">
                 <div class="button go-to-shop">
                     <!-- <a href="./shop/index.html">магазин</a> -->
-                    <p class="button-text">магазин</p>
+                    <span class="button-text">магазин</span>
                 </div>
                 <div class="button go-to-authorization">
                     <!-- <a href="./authorization/index.html">авторизация</a> -->
-                    <p class="button-text">авторизация</p>
+                    <!-- <p class="button-text">авторизация</p> -->
+                    <span class="button-text"> aвторизация</span>
+                    <!-- авторизация -->
                 </div>
             </div>
         </div>
