document.location assignment moved to html code

--- a/site/index.html
+++ b/site/index.html
@@ -27,18 +27,14 @@
                 </div>
             </div>
             <div class="button-container flex-container">
-                <div class="button go-to-shop">
-                    <!-- <a href="./shop/index.html">магазин</a> -->
-                    <span class="button-text">магазин</span>
+                <div onclick="document.location='/shop/index.html'" class="button">
+                    <span class="button-text">Магазин</span>
                 </div>
-                <div class="button go-to-authorization">
-                    <!-- <a href="./authorization/index.html">авторизация</a> -->
-                    <!-- <p class="button-text">авторизация</p> -->
-                    <span class="button-text"> aвторизация</span>
-                    <!-- авторизация -->
+                <div onclick="document.location='/authorization/index.html'" class="button">
+                    <span class="button-text"> Авторизация</span>
                 </div>
             </div>
         </div>
     </body>
-    <script src="index.js" type="module"></script>
+    <!-- <script src="index.js" type="module"></script> -->
 </html>
