--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <div class="frame">
+        <div class="frame title-screen">
             <h1>Welcome to</h1>
             <img class="logo" src="resources/main-logo.png" alt="Логотип магазина" />
             <h2>Один из лидеров рынка по продаже цифровой техники</h2>
