--- a/site/thanks/index.html
+++ b/site/thanks/index.html
@@ -8,10 +8,14 @@
   </head>
 
   <body>
-    <div>
+    <div class="content">
       <img src="../resources/main-logo.png" alt="Логотип магазина">
       <h1>Спасибо!</h1>
       <h1>Ваш заказ оформлен</h1>
       <p>*но это не точно</p>
+    </div>
+    <div class="footer">
+      <img src="../resources/footer-logo.png" alt="Логотип футера">
+      <p>8-800-23-11-777(с 08:00 до 22:00)</p>
     </div>
   </body>
