button classes split

--- a/site/cart/index.html
+++ b/site/cart/index.html
@@ -91,7 +91,10 @@
                             <button class="buy-button">оформить</button>
                         </div>
                     </a> -->
-                    <div onclick="document.location='/thanks/index.html'" class="button">
+                    <div
+                        onclick="document.location='/thanks/index.html'"
+                        class="button medium-size red"
+                    >
                         <span class="button-text">Оформить</span>
                     </div>
                 </div>
