--- a/site/index.html
+++ b/site/index.html
@@ -27,10 +27,13 @@
                 </div>
             </div>
             <div class="button-container flex-container">
-                <div onclick="document.location='/shop/index.html'" class="button">
+                <div class="button medium-size red" onclick="document.location='/shop/index.html'">
                     <span class="button-text">Магазин</span>
                 </div>
-                <div onclick="document.location='/authorization/index.html'" class="button">
+                <div
+                    class="button medium-size red"
+                    onclick="document.location='/authorization/index.html'"
+                >
                     <span class="button-text"> Авторизация</span>
                 </div>
             </div>
