added timer after removal of product from cart

--- a/site/cart/podutct-card.html
+++ b/site/cart/podutct-card.html
@@ -16,7 +16,29 @@
             </div>
             <div class="buy-container">
                 <p class="price">499.99$</p>
-                <button class="add-to-cart-button show-when-empty">добавить</button>
+                <div class="button white-button undo-button add-to-cart-button show-when-empty">
+                    <span class="small-button-text">вернуть</span>
+
+                    <!-- <svg>
+                        <circle r="18" cx="20" cy="20"></circle>
+                    </svg> -->
+
+                    <svg class="countdown">
+                        <path
+                            viewBox="0 0 120 40"
+                            d="M 60 0 h 40  
+                        c 11,0 20,9 20,20 
+                        c 0,11 -9,20 -20,20 
+                        h-80 
+                        c -11,0 -20,-9 -20,-20 
+                        c 0,-11 9,-20 20,-20 
+                        z"
+                            stroke="black"
+                            fill="transparent"
+                            class="fuse-line"
+                        ></path>
+                    </svg>
+                </div>
                 <!-- <button class="minus-cart-button hide-when-empty">-</button> -->
                 <div class="small-button minus-cart-button hide-when-empty white-button">
                     <span class="small-button-text">-</span>
