default visisibility of undo button is none

--- a/site/cart/podutct-card.html
+++ b/site/cart/podutct-card.html
@@ -16,7 +16,10 @@
             </div>
             <div class="buy-container">
                 <p class="price">499.99$</p>
-                <div class="button white-button undo-button add-to-cart-button show-when-empty">
+                <div
+                    class="button white-button undo-button add-to-cart-button show-when-empty"
+                    style="display: none"
+                >
                     <span class="small-button-text">вернуть</span>
 
                     <!-- <svg>
