cart-card styles done

--- a/site/cart/podutct-card.html
+++ b/site/cart/podutct-card.html
@@ -6,16 +6,20 @@
             <img src="../resources/nokia3310-800x800.jpg" alt="" />
         </div>
 
-        <div class="info-container frame">
-            <div class="product-name-container">
-                <h5 class="product-brand">бренд</h5>
-                <h5 class="product-name">Название</h5>
-            </div>
+        <div class="info-container">
+            <!-- <div class="product-name-container"> -->
+            <h5 class="product-brand">бренд</h5>
+            <!-- </div> -->
+            <h5 class="product-name">Название</h5>
             <div class="product-description-container">
                 <p class="product-description">детальное описание продукта</p>
             </div>
-            <div class="buy-container">
+        </div>
+        <div>
+            <div class="price-tag">
                 <p class="price">499.99$</p>
+            </div>
+            <div class="buy-container">
                 <div
                     class="button white-button undo-button add-to-cart-button show-when-empty"
                     style="display: none"
@@ -53,10 +57,10 @@
                 </div>
 
                 <!-- <button class="remove-from-cart hide-when-empty">x</button> -->
-                <div class="remove-from-cart small-button hide-when-empty red-button">
-                    <span class="small-button-text">X</span>
-                </div>
             </div>
+        </div>
+        <div class="remove-from-cart small-button hide-when-empty red-button">
+            <span class="small-button-text">X</span>
         </div>
     </div>
 </body>
