cart page somewhat done

--- a/site/cart/index.html
+++ b/site/cart/index.html
@@ -70,20 +70,26 @@
                 </svg>
             </div>
             <nav class="flex-container">
+                <p class="title">Корзина</p>
                 <input type="text" />
                 <p>
                     <a href="../shop/index.html">магазин</a>
                 </p>
+                <div>
+                    <a href="../accaunt.html">личный кабинет</a>
+                </div>
             </nav>
-            <h1>Корзина</h1>
         </header>
 
         <div class="cart-container flex-container">
-            <div class="product-list-container flex-container"></div>
+            <div class="cart-list-container flex-container">
+                <!-- <p>wtf</p> -->
+            </div>
             <div class="cart-side-bar flex-container">
-                <div class="frame flex-container flex-vertical flex-align-center">
+                <div class="checkout-box frame flex-container flex-vertical flex-align-center">
                     <div class="price-container flex-container">
-                        <p>Итого:</p>
+                        <p class="price">Итого:</p>
+
                         <p class="total-price">цена</p>
                     </div>
                     <!-- <a href="../thanks/index.html">
