--- a/site/accaunt.html
+++ b/site/accaunt.html
@@ -11,59 +11,59 @@
     <header>
         <div class="logo-container">
             <svg
-                    onclick="document.location='/index.html'"
-                    class="logo"
-                    width="538"
-                    height="95"
-                    viewBox="0 0 538 95"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                >
-                    <path
-                        d="M0 73.6V4H25C34 4 40.8 5.6 45.4 8.9C50.1 12.2 52.4 16.9 52.4 23.2C52.4 26.8 51.6 29.9 49.9 32.4C48.2 34.9 45.8 36.8 42.6 38C46.2 39 49 40.7 51 43.3C52.9 45.9 53.9 49.1 53.9 52.9C53.9 59.7 51.7 64.8 47.4 68.3C43.1 71.8 36.7 73.5 28.2 73.5H0V73.6ZM16.8 33H25.6C29.3 33 31.9 32.3 33.4 31C35 29.7 35.7 27.8 35.7 25.2C35.7 22.3 34.9 20.1 33.2 18.8C31.5 17.5 28.8 16.9 25 16.9H16.8V33ZM16.8 44V60.7H27.8C30.8 60.7 33.1 60 34.8 58.6C36.5 57.2 37.2 55.3 37.2 52.7C37.2 46.9 34.3 44 28.6 43.9L16.8 44Z"
-                        fill="#FF3333"
-                    />
-                    <path
-                        d="M83.1 51L91.7 21.8H109L87.8 82.2L86.9 84.4001C83.9 91.1001 78.6 94.4001 71 94.4001C68.9 94.4001 66.7 94.1 64.4 93.5V82H66.5C68.8 82 70.5 81.7 71.7 81C72.9 80.3 73.8 79.2 74.4 77.5L75.7 74.1L57.7 21.9H74.9L83.1 51Z"
-                        fill="#FF3333"
-                    />
-                    <path
-                        d="M131.9 9V21.9H140.4V33H131.9V56.7C131.9 58.6 132.3 60 133 60.8C133.7 61.6 135.1 62 137.2 62C138.8 62 140.1 61.9 141.2 61.7V73.2C138.3 74.1 135.3 74.6 132.1 74.6C126.6 74.6 122.5 73.3 119.8 70.7C117.1 68.1 115.8 64.1 115.8 58.8V33H109.2V21.9H115.8V9H131.9Z"
-                        fill="#FF3333"
-                    />
-                    <path
-                        d="M171.7 74.5C163.8 74.5 157.3 72.1 152.4 67.4C147.5 62.7 145 56.5 145 48.9V47.6C145 42.3 146 37.6 147.9 33.6C149.9 29.6 152.7 26.4 156.5 24.2C160.3 22 164.7 20.9 169.9 20.9C177.2 20.9 182.9 23.1 187.1 27.7C191.3 32.2 193.4 38.5 193.4 46.6V52.9H161.4C162 55.8 163.2 58.1 165.2 59.7C167.1 61.4 169.7 62.2 172.8 62.2C177.9 62.2 181.9 60.4 184.7 56.9L192.1 65.6C190.1 68.4 187.2 70.6 183.6 72.2C179.9 73.7 176 74.5 171.7 74.5ZM169.9 33.3C165.2 33.3 162.4 36.4 161.5 42.7H177.7V41.5C177.8 38.9 177.1 36.9 175.7 35.5C174.4 34 172.5 33.3 169.9 33.3Z"
-                        fill="#FF3333"
-                    />
-                    <path
-                        d="M200.8 73.6V4H225.8C234.7 4 241.6 5.6 246.2 8.9C250.9 12.2 253.2 16.9 253.2 23.2C253.2 26.8 252.4 29.9 250.7 32.4C249 34.9 246.6 36.8 243.4 38C247 39 249.8 40.7 251.8 43.3C253.7 45.9 254.7 49.1 254.7 52.9C254.7 59.7 252.5 64.8 248.2 68.3C243.9 71.7 237.5 73.5 229 73.5H200.8V73.6ZM217.5 33H226.3C230 33 232.6 32.3 234.1 31C235.7 29.7 236.4 27.8 236.4 25.2C236.4 22.3 235.6 20.1 233.9 18.8C232.2 17.5 229.5 16.9 225.7 16.9H217.5V33ZM217.5 44V60.7H228.5C231.5 60.7 233.9 60 235.5 58.6C237.1 57.2 237.9 55.3 237.9 52.7C237.9 46.9 235 44 229.3 43.9L217.5 44Z"
-                        fill="#FF3333"
-                    />
-                    <path
-                        d="M294.4 36.4L289.1 36C284 36 280.8 37.6 279.3 40.8V73.5H263.2V21.9H278.3L278.8 28.5C281.5 23.4 285.3 20.9 290.1 20.9C291.8 20.9 293.3 21.1 294.6 21.5L294.4 36.4Z"
-                        fill="#FF3333"
-                    />
-                    <path d="M317.1 0.699951H300.9V52.4H317.1V0.699951Z" fill="#FF3333" />
-                    <path
-                        d="M318 65.7C318 68 317.2 69.9 315.5 71.3C313.8 72.8 311.7 73.5 309 73.5C306.3 73.5 304.2 72.8 302.5 71.3C300.8 69.8 300 68 300 65.7C300 63.4 300.8 61.5 302.5 60.1C304.2 58.6 306.3 57.9 309 57.9C311.6 57.9 313.8 58.6 315.5 60.1C317.2 61.6 318 63.4 318 65.7Z"
-                        fill="#333333"
-                    />
-                    <path
-                        d="M325.3 47.3C325.3 42.1 326.2 37.4001 327.9 33.4001C329.6 29.4001 332.1 26.3001 335.3 24.1C338.5 21.9 342.3 20.8 346.5 20.8C351.9 20.8 356.1 22.6 359.1 26.3L359.7 21.8H374.3V71.6C374.3 76.2 373.2 80.1 371.1 83.5C369 86.9 365.9 89.4 361.9 91.2C357.9 93 353.2 93.9001 347.9 93.9001C344.1 93.9001 340.4 93.2 336.9 91.7C333.4 90.3 330.6 88.4001 328.8 86.1001L335.5 76.6C338.5 80.1 342.5 81.9001 347.4 81.9001C354.5 81.9001 358.1 78.2001 358.1 70.9001V69.3001C355 72.7001 351.1 74.4001 346.4 74.4001C340.1 74.4001 335 72 331.1 67.2C327.2 62.4 325.3 55.9 325.3 47.8V47.3ZM341.4 48.3C341.4 52.5 342.2 55.9001 343.8 58.4001C345.4 60.9001 347.6 62.1 350.5 62.1C354 62.1 356.5 60.9 358.1 58.6V36.9001C356.5 34.5001 354 33.4001 350.6 33.4001C347.7 33.4001 345.5 34.7001 343.9 37.2001C342.2 39.8001 341.4 43.5 341.4 48.3Z"
-                        fill="#FF3333"
-                    />
-                    <path
-                        d="M412.6 73.6C412 72.5 411.5 71 411.1 69C408.1 72.7 404 74.6 398.7 74.6C393.8 74.6 389.7 73.1 386.3 70.2C382.9 67.3 381.2 63.5 381.2 59.1C381.2 53.5 383.3 49.3 387.4 46.4C391.5 43.5 397.6 42.1 405.5 42.1H410.5V39.4C410.5 34.6 408.4 32.2 404.3 32.2C400.5 32.2 398.6 34.1 398.6 37.9H382.5C382.5 32.9 384.6 28.8 388.9 25.7C393.1 22.6 398.6 21 405.2 21C411.8 21 417 22.6 420.8 25.8C424.6 29 426.6 33.4 426.7 39V61.9C426.8 66.7 427.5 70.3 428.9 72.8V73.6H412.6ZM402.5 63.1C404.5 63.1 406.2 62.7 407.5 61.8C408.8 60.9 409.8 60 410.3 58.9V50.6H405.6C400 50.6 397.2 53.1 397.2 58.1C397.2 59.6 397.7 60.8 398.7 61.7C399.7 62.6 401 63.1 402.5 63.1Z"
-                        fill="#FF3333"
-                    />
-                    <path
-                        d="M433.4 47.2999C433.4 39.0999 435.2 32.7 438.7 27.9C442.2 23.1 447.2 20.7999 453.5 20.7999C458.1 20.7999 462 22.5999 465.2 26.2999V0.199951H481.4V73.6H466.9L466.1 68.1C462.8 72.4 458.6 74.6 453.5 74.6C447.4 74.6 442.5 72.2 438.9 67.5C435.2 62.8 433.4 55.9999 433.4 47.2999ZM449.5 48.2999C449.5 57.4999 452.2 62.0999 457.5 62.0999C461.1 62.0999 463.6 60.5999 465.1 57.5999V37.9C463.6 34.8 461.1 33.2999 457.6 33.2999C452.6 33.2999 449.9 37.2999 449.5 45.2999V48.2999Z"
-                        fill="#FF3333"
-                    />
-                    <path
-                        d="M515.5 74.5C507.6 74.5 501.1 72.1 496.2 67.4C491.3 62.7 488.8 56.5 488.8 48.9V47.6C488.8 42.3 489.8 37.6 491.7 33.6C493.6 29.6 496.5 26.4 500.3 24.2C504.1 22 508.5 20.9 513.7 20.9C521 20.9 526.7 23.1 530.9 27.7C535.1 32.3 537.2 38.5 537.2 46.6V52.9H505.2C505.8 55.8 507 58.1 509 59.7C510.9 61.4 513.5 62.2 516.5 62.2C521.6 62.2 525.6 60.4 528.5 56.9L535.9 65.6C533.9 68.4 531.1 70.6 527.4 72.2C523.7 73.7 519.8 74.5 515.5 74.5ZM513.7 33.3C509 33.3 506.2 36.4 505.3 42.7H521.6V41.5C521.7 38.9 521 36.9 519.6 35.5C518.2 34.1 516.2 33.3 513.7 33.3Z"
-                        fill="#FF3333"
-                    />
+                onclick="document.location='/index.html'"
+                class="logo"
+                width="538"
+                height="95"
+                viewBox="0 0 538 95"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+            >
+                <path
+                    d="M0 73.6V4H25C34 4 40.8 5.6 45.4 8.9C50.1 12.2 52.4 16.9 52.4 23.2C52.4 26.8 51.6 29.9 49.9 32.4C48.2 34.9 45.8 36.8 42.6 38C46.2 39 49 40.7 51 43.3C52.9 45.9 53.9 49.1 53.9 52.9C53.9 59.7 51.7 64.8 47.4 68.3C43.1 71.8 36.7 73.5 28.2 73.5H0V73.6ZM16.8 33H25.6C29.3 33 31.9 32.3 33.4 31C35 29.7 35.7 27.8 35.7 25.2C35.7 22.3 34.9 20.1 33.2 18.8C31.5 17.5 28.8 16.9 25 16.9H16.8V33ZM16.8 44V60.7H27.8C30.8 60.7 33.1 60 34.8 58.6C36.5 57.2 37.2 55.3 37.2 52.7C37.2 46.9 34.3 44 28.6 43.9L16.8 44Z"
+                    fill="#FF3333"
+                />
+                <path
+                    d="M83.1 51L91.7 21.8H109L87.8 82.2L86.9 84.4001C83.9 91.1001 78.6 94.4001 71 94.4001C68.9 94.4001 66.7 94.1 64.4 93.5V82H66.5C68.8 82 70.5 81.7 71.7 81C72.9 80.3 73.8 79.2 74.4 77.5L75.7 74.1L57.7 21.9H74.9L83.1 51Z"
+                    fill="#FF3333"
+                />
+                <path
+                    d="M131.9 9V21.9H140.4V33H131.9V56.7C131.9 58.6 132.3 60 133 60.8C133.7 61.6 135.1 62 137.2 62C138.8 62 140.1 61.9 141.2 61.7V73.2C138.3 74.1 135.3 74.6 132.1 74.6C126.6 74.6 122.5 73.3 119.8 70.7C117.1 68.1 115.8 64.1 115.8 58.8V33H109.2V21.9H115.8V9H131.9Z"
+                    fill="#FF3333"
+                />
+                <path
+                    d="M171.7 74.5C163.8 74.5 157.3 72.1 152.4 67.4C147.5 62.7 145 56.5 145 48.9V47.6C145 42.3 146 37.6 147.9 33.6C149.9 29.6 152.7 26.4 156.5 24.2C160.3 22 164.7 20.9 169.9 20.9C177.2 20.9 182.9 23.1 187.1 27.7C191.3 32.2 193.4 38.5 193.4 46.6V52.9H161.4C162 55.8 163.2 58.1 165.2 59.7C167.1 61.4 169.7 62.2 172.8 62.2C177.9 62.2 181.9 60.4 184.7 56.9L192.1 65.6C190.1 68.4 187.2 70.6 183.6 72.2C179.9 73.7 176 74.5 171.7 74.5ZM169.9 33.3C165.2 33.3 162.4 36.4 161.5 42.7H177.7V41.5C177.8 38.9 177.1 36.9 175.7 35.5C174.4 34 172.5 33.3 169.9 33.3Z"
+                    fill="#FF3333"
+                />
+                <path
+                    d="M200.8 73.6V4H225.8C234.7 4 241.6 5.6 246.2 8.9C250.9 12.2 253.2 16.9 253.2 23.2C253.2 26.8 252.4 29.9 250.7 32.4C249 34.9 246.6 36.8 243.4 38C247 39 249.8 40.7 251.8 43.3C253.7 45.9 254.7 49.1 254.7 52.9C254.7 59.7 252.5 64.8 248.2 68.3C243.9 71.7 237.5 73.5 229 73.5H200.8V73.6ZM217.5 33H226.3C230 33 232.6 32.3 234.1 31C235.7 29.7 236.4 27.8 236.4 25.2C236.4 22.3 235.6 20.1 233.9 18.8C232.2 17.5 229.5 16.9 225.7 16.9H217.5V33ZM217.5 44V60.7H228.5C231.5 60.7 233.9 60 235.5 58.6C237.1 57.2 237.9 55.3 237.9 52.7C237.9 46.9 235 44 229.3 43.9L217.5 44Z"
+                    fill="#FF3333"
+                />
+                <path
+                    d="M294.4 36.4L289.1 36C284 36 280.8 37.6 279.3 40.8V73.5H263.2V21.9H278.3L278.8 28.5C281.5 23.4 285.3 20.9 290.1 20.9C291.8 20.9 293.3 21.1 294.6 21.5L294.4 36.4Z"
+                    fill="#FF3333"
+                />
+                <path d="M317.1 0.699951H300.9V52.4H317.1V0.699951Z" fill="#FF3333" />
+                <path
+                    d="M318 65.7C318 68 317.2 69.9 315.5 71.3C313.8 72.8 311.7 73.5 309 73.5C306.3 73.5 304.2 72.8 302.5 71.3C300.8 69.8 300 68 300 65.7C300 63.4 300.8 61.5 302.5 60.1C304.2 58.6 306.3 57.9 309 57.9C311.6 57.9 313.8 58.6 315.5 60.1C317.2 61.6 318 63.4 318 65.7Z"
+                    fill="#333333"
+                />
+                <path
+                    d="M325.3 47.3C325.3 42.1 326.2 37.4001 327.9 33.4001C329.6 29.4001 332.1 26.3001 335.3 24.1C338.5 21.9 342.3 20.8 346.5 20.8C351.9 20.8 356.1 22.6 359.1 26.3L359.7 21.8H374.3V71.6C374.3 76.2 373.2 80.1 371.1 83.5C369 86.9 365.9 89.4 361.9 91.2C357.9 93 353.2 93.9001 347.9 93.9001C344.1 93.9001 340.4 93.2 336.9 91.7C333.4 90.3 330.6 88.4001 328.8 86.1001L335.5 76.6C338.5 80.1 342.5 81.9001 347.4 81.9001C354.5 81.9001 358.1 78.2001 358.1 70.9001V69.3001C355 72.7001 351.1 74.4001 346.4 74.4001C340.1 74.4001 335 72 331.1 67.2C327.2 62.4 325.3 55.9 325.3 47.8V47.3ZM341.4 48.3C341.4 52.5 342.2 55.9001 343.8 58.4001C345.4 60.9001 347.6 62.1 350.5 62.1C354 62.1 356.5 60.9 358.1 58.6V36.9001C356.5 34.5001 354 33.4001 350.6 33.4001C347.7 33.4001 345.5 34.7001 343.9 37.2001C342.2 39.8001 341.4 43.5 341.4 48.3Z"
+                    fill="#FF3333"
+                />
+                <path
+                    d="M412.6 73.6C412 72.5 411.5 71 411.1 69C408.1 72.7 404 74.6 398.7 74.6C393.8 74.6 389.7 73.1 386.3 70.2C382.9 67.3 381.2 63.5 381.2 59.1C381.2 53.5 383.3 49.3 387.4 46.4C391.5 43.5 397.6 42.1 405.5 42.1H410.5V39.4C410.5 34.6 408.4 32.2 404.3 32.2C400.5 32.2 398.6 34.1 398.6 37.9H382.5C382.5 32.9 384.6 28.8 388.9 25.7C393.1 22.6 398.6 21 405.2 21C411.8 21 417 22.6 420.8 25.8C424.6 29 426.6 33.4 426.7 39V61.9C426.8 66.7 427.5 70.3 428.9 72.8V73.6H412.6ZM402.5 63.1C404.5 63.1 406.2 62.7 407.5 61.8C408.8 60.9 409.8 60 410.3 58.9V50.6H405.6C400 50.6 397.2 53.1 397.2 58.1C397.2 59.6 397.7 60.8 398.7 61.7C399.7 62.6 401 63.1 402.5 63.1Z"
+                    fill="#FF3333"
+                />
+                <path
+                    d="M433.4 47.2999C433.4 39.0999 435.2 32.7 438.7 27.9C442.2 23.1 447.2 20.7999 453.5 20.7999C458.1 20.7999 462 22.5999 465.2 26.2999V0.199951H481.4V73.6H466.9L466.1 68.1C462.8 72.4 458.6 74.6 453.5 74.6C447.4 74.6 442.5 72.2 438.9 67.5C435.2 62.8 433.4 55.9999 433.4 47.2999ZM449.5 48.2999C449.5 57.4999 452.2 62.0999 457.5 62.0999C461.1 62.0999 463.6 60.5999 465.1 57.5999V37.9C463.6 34.8 461.1 33.2999 457.6 33.2999C452.6 33.2999 449.9 37.2999 449.5 45.2999V48.2999Z"
+                    fill="#FF3333"
+                />
+                <path
+                    d="M515.5 74.5C507.6 74.5 501.1 72.1 496.2 67.4C491.3 62.7 488.8 56.5 488.8 48.9V47.6C488.8 42.3 489.8 37.6 491.7 33.6C493.6 29.6 496.5 26.4 500.3 24.2C504.1 22 508.5 20.9 513.7 20.9C521 20.9 526.7 23.1 530.9 27.7C535.1 32.3 537.2 38.5 537.2 46.6V52.9H505.2C505.8 55.8 507 58.1 509 59.7C510.9 61.4 513.5 62.2 516.5 62.2C521.6 62.2 525.6 60.4 528.5 56.9L535.9 65.6C533.9 68.4 531.1 70.6 527.4 72.2C523.7 73.7 519.8 74.5 515.5 74.5ZM513.7 33.3C509 33.3 506.2 36.4 505.3 42.7H521.6V41.5C521.7 38.9 521 36.9 519.6 35.5C518.2 34.1 516.2 33.3 513.7 33.3Z"
+                    fill="#FF3333"
+                />
             </svg>
         </div>
         <nav class="flex-container">
@@ -78,19 +78,18 @@
         <div class="flex-container flex-align-center">
             <div class="user-info">
                 <p>Никнейм:</p>
-                <div class="frame-inset">
+                <div class="login-name frame-inset">
                     <p>Никнейм</p>
                 </div>
                 <p>Ф.И.О.:</p>
-                <div class="frame-inset">
+                <div class="first-name frame-inset">
                     <p>Иванов Иван Иванович</p>
                 </div>
-                    <p>E-mail:</p>
-               <div class="frame-inset">
-                   <p>test@test.com</p>
-             </div>
+                <p>E-mail:</p>
+                <div class="e-mail frame-inset">
+                    <p>test@test.com</p>
+                </div>
             </div>
-
 
             <div class="cart-side-bar flex-container">
                 <div class="checkout-box frame flex-container flex-vertical flex-align-center">
@@ -106,11 +105,11 @@
                     </div>
                 </div>
             </div>
-    </div>
-    <div class="footer">
-        <img src="./resources/footer-logo.png" alt="Логотип футера">
-        <p>8-800-23-11-777(с 08:00 до 22:00)</p>
-      </div>
+        </div>
+        <div class="footer">
+            <img src="./resources/footer-logo.png" alt="Логотип футера" />
+            <p>8-800-23-11-777(с 08:00 до 22:00)</p>
+        </div>
     </body>
     <script type="module" src="./acc-script.js"></script>
 </html>
