--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -69,9 +69,9 @@
             </svg>
         </h1>
         <nav class="shop-main-navbar">
-            <div>
+            <!-- <div>
                 <a href="../index.html">главная</a>
-            </div>
+            </div> -->
             <div>
                 <a href="../cart/index.html">корзина</a>
             </div>
@@ -80,6 +80,9 @@
             </div>
             <div class="vsible-when-logged-out">
                 <a href="../authorization/index.html">авторизация</a>
+            </div>
+            <div class="vsible-when-logged-in">
+                <span>привет, </span><span class="username"></span>
             </div>
             <div class="vsible-when-logged-in">
                 <button class="logout-button">выйти</button>
