added logout and accaunt icons

--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -76,7 +76,30 @@
                 <a href="../cart/index.html">корзина</a>
             </div>
             <div>
-                <a href="../accaunt.html">личный кабинет</a>
+                <a href="../accaunt.html">
+                    <svg
+                        width="18"
+                        height="20"
+                        viewBox="0 0 18 20"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                    >
+                        <path
+                            fill-rule="evenodd"
+                            clip-rule="evenodd"
+                            d="M8.75 8.5C10.683 8.5 12.25 6.933 12.25 5C12.25 3.067 10.683 1.5 8.75 1.5C6.817 1.5 5.25 3.067 5.25 5C5.25 6.933 6.817 8.5 8.75 8.5ZM8.75 10C11.5114 10 13.75 7.76142 13.75 5C13.75 2.23858 11.5114 0 8.75 0C5.98858 0 3.75 2.23858 3.75 5C3.75 7.76142 5.98858 10 8.75 10Z"
+                            fill="black"
+                        />
+                        <path
+                            fill-rule="evenodd"
+                            clip-rule="evenodd"
+                            d="M5.75 13.75C3.40279 13.75 1.5 15.6528 1.5 18V19C1.5 19.4142 1.16421 19.75 0.75 19.75C0.335786 19.75 0 19.4142 0 19V18C0 14.8244 2.57436 12.25 5.75 12.25H11.75C14.9256 12.25 17.5 14.8244 17.5 18V19C17.5 19.4142 17.1642 19.75 16.75 19.75C16.3358 19.75 16 19.4142 16 19V18C16 15.6528 14.0972 13.75 11.75 13.75H5.75Z"
+                            fill="black"
+                        />
+                    </svg>
+
+                    <!-- личный кабинет -->
+                </a>
             </div>
             <div class="vsible-when-logged-out">
                 <a href="../authorization/index.html">авторизация</a>
@@ -85,7 +108,10 @@
                 <span>привет, </span><span class="username"></span>
             </div>
             <div class="vsible-when-logged-in">
-                <button class="logout-button">выйти</button>
+                <button class="logout-button">
+                    <img src="../resources/logouticon.png" style="height: 20px" alt="" />
+                    <!-- выйти -->
+                </button>
             </div>
         </nav>
 
