added brand filter

--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -114,7 +114,15 @@
                 </button>
             </div>
         </nav>
-
+        <div class="product-type-filter">
+            <a id="all" class="active" href="#">все</a>
+            <!-- cписок типов -->
+        </div>
+        <form class="product-brand-filter">
+            фильтр:
+            <br />
+            <!-- cписок брендов -->
+        </form>
         <div class="product-list-container">
             <!-- сюда скриптом добавляется список товаров -->
         </div>
