convert account page

--- a/site/accaunt.html
+++ b/site/accaunt.html
@@ -75,7 +75,7 @@
     </header>
 
     <body>
-        <div class="flex-container flex-align-center">
+        <div class="flex-container flex-align-center content">
             <div class="user-info">
                 <p>Никнейм:</p>
                 <div class="login-name frame-inset">
