added cart clearing ot thanks screen

--- a/site/thanks/index.html
+++ b/site/thanks/index.html
@@ -23,4 +23,6 @@
       <img src="../resources/footer-logo.png" alt="Логотип футера">
       <p>8-800-23-11-777(с 08:00 до 22:00)</p>
     </div>
+
+    <script src="thanks-script.js"></script>
   </body>
