header pinned in cart, added footer

--- a/site/shop/podutct-card.html
+++ b/site/shop/podutct-card.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="shop-styles.css" />
+<link rel="stylesheet" href="card-styles.css" />
 <body>
     <div class="product-card">
         <div class="img-container">
