--- a/site/cart/index.html
+++ b/site/cart/index.html
@@ -71,7 +71,7 @@
             </div>
             <nav class="flex-container">
                 <p class="title">Корзина</p>
-                <input type="text" />
+                <!-- <input type="text" /> -->
                 <p>
                     <a href="../shop/index.html">магазин</a>
                 </p>
@@ -80,8 +80,8 @@
                 </div>
             </nav>
         </header>
-
-        <div class="cart-container flex-container">
+        <div class="padding"></div>
+        <main class="cart-container flex-container">
             <div class="cart-list-container flex-container">
                 <!-- <p>wtf</p> -->
             </div>
@@ -105,6 +105,11 @@
                     </div>
                 </div>
             </div>
+        </main>
+
+        <div class="footer">
+            <img src="../resources/footer-logo.png" alt="Логотип футера" />
+            <p>8-800-23-11-777(с 08:00 до 22:00)</p>
         </div>
     </body>
     <script src="./cart-script.js" type="module"></script>
