file structure changed

--- a/site/account/index.html
+++ b/site/account/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./styles.css" />
+        <link rel="stylesheet" href="../assets/styles.css" />
         <title>Document</title>
     </head>
 
@@ -75,7 +75,7 @@
         <div class="flex-container flex-align-center content justify-content-center column">
 
             <div class="small-logo">
-                <img src="../resources/ByteBridage-small.png" alt="Логотип магазина">
+                <img src="../assets/images/ByteBridage-small.png" alt="Логотип магазина">
             </div>
 
             <nav class="flex-container account">
@@ -101,7 +101,7 @@
         </div>
 
         <div class="footer">
-            <img src="./resources/footer-logo.png" alt="Логотип футера" />
+            <img src="../assets/images/footer-logo.png" alt="Логотип футера" />
             <p>8-800-23-11-777(с 08:00 до 22:00)</p>
         </div>
     </body>
