--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../styles.css" />
+        <link rel="stylesheet" href="../assets/styles.css" />
         <link rel="stylesheet" href="./shop-styles.css" />
         <link rel="stylesheet" href="./card-styles.css" />
         <title>Document</title>
@@ -78,7 +78,7 @@
             </div> -->
 
                 <div>
-                    <a href="../accaunt.html">
+                    <a href="../account/index.html">
                         <svg
                             width="18"
                             height="20"
@@ -146,7 +146,7 @@
 
                 <div class="vsible-when-logged-in">
                     <button class="logout-button">
-                        <img src="../resources/logouticon.png" style="height: 20px" alt="" />
+                        <img src="../assets/images/logouticon.png" style="height: 20px" alt="" />
                         <!-- выйти -->
                     </button>
                 </div>
