--- a/site/authorization/index.html
+++ b/site/authorization/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="../styles.css" />
+        <link rel="stylesheet" href="../assets/styles.css" />
         <link rel="stylesheet" href="auth-styles.css" />
     </head>
     <body class="auth">
