--- a/site/cart/index.html
+++ b/site/cart/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../styles.css" />
+        <link rel="stylesheet" href="../assets/styles.css" />
         <link rel="stylesheet" href="./cart-styles.css" />
         <link rel="stylesheet" href="./cart-card-styles.css" />
         <title>Document</title>
@@ -76,7 +76,7 @@
                     <a href="../shop/index.html">магазин</a>
                 </p>
                 <div>
-                    <a href="../accaunt.html">личный кабинет</a>
+                    <a href="../account/index.html">личный кабинет</a>
                 </div>
             </nav>
         </header>
