--- a/site/index.html
+++ b/site/index.html
@@ -4,13 +4,13 @@
     <head>
         <meta charset="UTF-8" />
         <title>Основной файл index.html</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="assets/styles.css" />
     </head>
 
     <body>
         <div class="frame title-screen">
             <h1>Welcome to</h1>
-            <img class="logo" src="resources/main-logo.png" alt="Логотип магазина" />
+            <img class="logo" src="assets/images/main-logo.png" alt="Логотип магазина" />
             <h2>Один из лидеров рынка по продаже цифровой техники</h2>
             <div class="red-plate flex-container">
                 <div>
