server file structure changed

--- a/site/cart/index.html
+++ b/site/cart/index.html
@@ -108,7 +108,7 @@
         </main>
 
         <div class="footer">
-            <img src="../resources/footer-logo.png" alt="Логотип футера" />
+            <img src="../assets/images/footer-logo.png" alt="Логотип футера" />
             <p>8-800-23-11-777(с 08:00 до 22:00)</p>
         </div>
     </body>
