--- a/site/thanks/index.html
+++ b/site/thanks/index.html
@@ -4,13 +4,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="thanks-style.css" />
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../assets/styles.css" />
     <title>Thanks for your order</title>
   </head>
 
   <body>
     <div class="content">
-      <img src="../resources/main-logo.png" alt="Логотип магазина">
+      <img src="../assets/images/main-logo.png" alt="Логотип магазина">
       <h1>Спасибо!</h1>
       <h1>Ваш заказ оформлен</h1>
       <p>*но это не точно</p>
@@ -20,7 +20,7 @@
     </div>    
 
     <div class="footer">
-      <img src="../resources/footer-logo.png" alt="Логотип футера">
+      <img src="../assets/images/footer-logo.png" alt="Логотип футера">
       <p>8-800-23-11-777(с 08:00 до 22:00)</p>
     </div>
 
