--- a/site/account/index.html
+++ b/site/account/index.html
@@ -69,14 +69,22 @@
             </div>
         </header> -->
 
-        <div class="flex-container flex-align-center content justify-content-center column">
+        <div
+            class="flex-container flex-align-center content justify-content-center column"
+        >
             <div class="small-logo">
-                <img src="../assets/images/ByteBridage-small.png" alt="Логотип магазина" />
+                <img
+                    src="../assets/images/ByteBridage-small.png"
+                    alt="Логотип магазина"
+                />
             </div>
 
             <nav class="flex-container account">
                 <p class="title content">Личный кабинет</p>
-                <div onclick="document.location='/shop/index.html'" class="button medium-size red">
+                <div
+                    onclick="document.location='/shop/index.html'"
+                    class="button medium-size red"
+                >
                     <span class="button-text"> < < назад </span>
                     <!-- &#60 &#60  -->
                 </div>
