--- a/site/cart/podutct-card.html
+++ b/site/cart/podutct-card.html
@@ -47,12 +47,16 @@
                     </svg>
                 </div>
                 <!-- <button class="minus-cart-button hide-when-empty">-</button> -->
-                <div class="small-button minus-cart-button hide-when-empty white-button">
+                <div
+                    class="small-button minus-cart-button hide-when-empty white-button"
+                >
                     <span class="small-button-text">-</span>
                 </div>
                 <p class="cart-counter hide-when-empty">0</p>
                 <!-- <button class="plus-cart-button hide-when-empty">+</button> -->
-                <div class="small-button plus-cart-button hide-when-empty white-button">
+                <div
+                    class="small-button plus-cart-button hide-when-empty white-button"
+                >
                     <span class="small-button-text">+</span>
                 </div>
 
