--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -46,7 +46,10 @@
                         d="M294.4 36.4L289.1 36C284 36 280.8 37.6 279.3 40.8V73.5H263.2V21.9H278.3L278.8 28.5C281.5 23.4 285.3 20.9 290.1 20.9C291.8 20.9 293.3 21.1 294.6 21.5L294.4 36.4Z"
                         fill="#FF3333"
                     />
-                    <path d="M317.1 0.699951H300.9V52.4H317.1V0.699951Z" fill="#FF3333" />
+                    <path
+                        d="M317.1 0.699951H300.9V52.4H317.1V0.699951Z"
+                        fill="#FF3333"
+                    />
                     <path
                         d="M318 65.7C318 68 317.2 69.9 315.5 71.3C313.8 72.8 311.7 73.5 309 73.5C306.3 73.5 304.2 72.8 302.5 71.3C300.8 69.8 300 68 300 65.7C300 63.4 300.8 61.5 302.5 60.1C304.2 58.6 306.3 57.9 309 57.9C311.6 57.9 313.8 58.6 315.5 60.1C317.2 61.6 318 63.4 318 65.7Z"
                         fill="#333333"
@@ -146,7 +149,11 @@
 
                 <div class="vsible-when-logged-in">
                     <button class="logout-button">
-                        <img src="../assets/images/logouticon.png" style="height: 20px" alt="" />
+                        <img
+                            src="../assets/images/logouticon.png"
+                            style="height: 20px"
+                            alt=""
+                        />
                         <!-- выйти -->
                     </button>
                 </div>
