--- a/site/shop/podutct-card.html
+++ b/site/shop/podutct-card.html
@@ -17,7 +17,9 @@
             </div>
             <div class="buy-container">
                 <p class="price">499.99$</p>
-                <button class="add-to-cart-button show-when-empty">добавить</button>
+                <button class="add-to-cart-button show-when-empty">
+                    добавить
+                </button>
                 <button class="minus-cart-button hide-when-empty">-</button>
                 <p class="cart-counter hide-when-empty">0</p>
                 <button class="plus-cart-button hide-when-empty">+</button>
