shop-page-refactoring

--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -175,6 +175,11 @@
                 </form>
             </div>
         </main>
+
+        <div class="footer">
+            <img src="../assets/images/footer-logo.png" alt="Логотип футера" />
+            <p>8-800-23-11-777(с 08:00 до 22:00)</p>
+        </div>
     </body>
     <script type="module" src="shop-script.js"></script>
 </html>
