--- a/site/shop/podutct-card.html
+++ b/site/shop/podutct-card.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="shop-styles.css" />
-<link rel="stylesheet" href="card-styles.css" />
 <body>
     <div class="product-card">
         <div class="img-container">
@@ -8,23 +7,40 @@
         </div>
 
         <div class="info-container">
-            <div class="product-name-container">
-                <h5 class="product-brand">бренд</h5>
-                <h5 class="product-name">Название</h5>
-            </div>
+            <!-- <div class="product-name-container"> -->
+            <h5 class="product-brand">бренд</h5>
+            <!-- </div> -->
+            <h5 class="product-name">Название</h5>
             <div class="product-description-container">
                 <p class="product-description">детальное описание продукта</p>
             </div>
-            <div class="buy-container">
+        </div>
+        <div>
+            <div class="price-tag">
                 <p class="price">499.99$</p>
-                <button class="add-to-cart-button show-when-empty">
-                    добавить
-                </button>
-                <button class="minus-cart-button hide-when-empty">-</button>
-                <p class="cart-counter hide-when-empty">0</p>
-                <button class="plus-cart-button hide-when-empty">+</button>
-                <button class="remove-from-cart hide-when-empty">x</button>
             </div>
+            <div class="buy-container">
+                <div class="add-to-cart-button show-when-empty button medium-size red">
+                    <span class="button-text">Добавить</span>
+                </div>
+                <div
+                    class="small-button minus-cart-button hide-when-empty white-button"
+                >
+                    <span class="small-button-text">-</span>
+                </div>
+                <p class="cart-counter hide-when-empty">0</p>
+                <!-- <button class="plus-cart-button hide-when-empty">+</button> -->
+                <div
+                    class="small-button plus-cart-button hide-when-empty white-button"
+                >
+                    <span class="small-button-text">+</span>
+                </div>
+
+                <!-- <button class="remove-from-cart hide-when-empty">x</button> -->
+            </div>
+        </div>
+        <div class="remove-from-cart small-button hide-when-empty red-button">
+            <span class="small-button-text">X</span>
         </div>
     </div>
 </body>
