--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -11,8 +11,8 @@
     </head>
 
     <body>
-        <header class="shop-header">
-            <h1 class="logo-container">
+        <header>
+            <div class="logo-container">
                 <svg
                     onclick="document.location='/index.html'"
                     class="logo"
@@ -71,8 +71,9 @@
                         fill="#FF3333"
                     />
                 </svg>
-            </h1>
-            <nav class="shop-main-navbar">
+            </div>
+            <nav>
+                <p class="title">Магазин</p>
                 <div class="vsible-when-logged-in">
                     <span>привет, </span><span class="username"></span>
                 </div>
