--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -46,10 +46,7 @@
                         d="M294.4 36.4L289.1 36C284 36 280.8 37.6 279.3 40.8V73.5H263.2V21.9H278.3L278.8 28.5C281.5 23.4 285.3 20.9 290.1 20.9C291.8 20.9 293.3 21.1 294.6 21.5L294.4 36.4Z"
                         fill="#FF3333"
                     />
-                    <path
-                        d="M317.1 0.699951H300.9V52.4H317.1V0.699951Z"
-                        fill="#FF3333"
-                    />
+                    <path d="M317.1 0.699951H300.9V52.4H317.1V0.699951Z" fill="#FF3333" />
                     <path
                         d="M318 65.7C318 68 317.2 69.9 315.5 71.3C313.8 72.8 311.7 73.5 309 73.5C306.3 73.5 304.2 72.8 302.5 71.3C300.8 69.8 300 68 300 65.7C300 63.4 300.8 61.5 302.5 60.1C304.2 58.6 306.3 57.9 309 57.9C311.6 57.9 313.8 58.6 315.5 60.1C317.2 61.6 318 63.4 318 65.7Z"
                         fill="#333333"
@@ -82,10 +79,10 @@
             </div> -->
 
                 <div>
-                    <a href="../account/index.html">
+                    <a class="vector-icon" href="../account/index.html">
                         <svg
-                            width="18"
-                            height="20"
+                            width="24"
+                            height="24"
                             viewBox="0 0 18 20"
                             fill="none"
                             xmlns="http://www.w3.org/2000/svg"
@@ -109,7 +106,7 @@
                 </div>
 
                 <div>
-                    <a href="../cart/index.html"
+                    <a class="vector-icon" href="../cart/index.html"
                         ><svg
                             width="24"
                             height="24"
@@ -144,19 +141,73 @@
                         </svg>
                     </a>
                 </div>
-                <div class="vsible-when-logged-out">
-                    <a href="../authorization/index.html">авторизация</a>
+                <div class="vsible-when-logged-out vector-icon">
+                    <!-- <a href="../authorization/index.html">авторизация</a> -->
+                    <a href="../authorization/index.html">
+                        <svg
+                            id="Layer_1"
+                            data-name="Layer 1"
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 26 30"
+                            width="24"
+                            height="24"
+                        >
+                            <defs>
+                                <style>
+                                    .cls-1,
+                                    .cls-2 {
+                                        fill: none;
+                                        stroke: #000;
+                                        stroke-miterlimit: 10;
+                                        stroke-width: 2px;
+                                    }
+                                    .cls-2 {
+                                        stroke-linecap: round;
+                                    }
+                                </style>
+                            </defs>
+                            <title>login_esport</title>
+                            <line class="cls-1" x1="26" y1="15" x2="8" y2="15" />
+                            <line class="cls-2" x1="14" y1="19" x2="8" y2="15" />
+                            <line class="cls-2" x1="14" y1="11" x2="8" y2="15" />
+                            <polyline class="cls-2" points="20 9.36 20 1 1 1 1 29 20 29 20 21.65" />
+                        </svg>
+                    </a>
                 </div>
 
                 <div class="vsible-when-logged-in">
-                    <button class="logout-button">
-                        <img
-                            src="../assets/images/logouticon.png"
-                            style="height: 20px"
-                            alt=""
-                        />
+                    <a class="logout-button vector-icon">
+                        <!-- <img src="../assets/images/logouticon.png" style="height: 20px" alt="" /> -->
+                        <svg
+                            id="Layer_1"
+                            data-name="Layer 1"
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 29 30"
+                            width="24"
+                            height="24"
+                        >
+                            <defs>
+                                <style>
+                                    .cls-1,
+                                    .cls-2 {
+                                        fill: none;
+                                        stroke: #000;
+                                        stroke-miterlimit: 10;
+                                        stroke-width: 2px;
+                                    }
+                                    .cls-2 {
+                                        stroke-linecap: round;
+                                    }
+                                </style>
+                            </defs>
+                            <title>logout_exp</title>
+                            <line class="cls-1" x1="12" y1="15" x2="28" y2="15" />
+                            <line class="cls-2" x1="22" y1="19" x2="28" y2="15" />
+                            <line class="cls-2" x1="22" y1="11" x2="28" y2="15" />
+                            <polyline class="cls-2" points="19 8.4 19 1 1 1 1 29 19 29 19 21.7" />
+                        </svg>
                         <!-- выйти -->
-                    </button>
+                    </a>
                 </div>
             </nav>
             <div class="product-type-filter">
