--- a/site/account/index.html
+++ b/site/account/index.html
@@ -9,9 +9,14 @@
     </head>
 
     <body class="account-body">
-        <div class="flex-container flex-align-center content justify-content-center column">
+        <div
+            class="flex-container flex-align-center content justify-content-center column"
+        >
             <div class="small-logo">
-                <img src="../assets/images/ByteBridage-small.png" alt="Логотип магазина" />
+                <img
+                    src="../assets/images/ByteBridage-small.png"
+                    alt="Логотип магазина"
+                />
             </div>
 
             <nav class="flex-container account">
