--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -72,7 +72,7 @@
                     />
                 </svg>
             </div>
-            <nav>
+            <nav class="shop-main-navbar">
                 <p class="title">Магазин</p>
                 <div class="vsible-when-logged-in">
                     <span>привет, </span><span class="username"></span>
@@ -171,7 +171,7 @@
                             </defs>
                             <title>login_esport</title>
                             <line
-                                class="cls-1"
+                                class="cls-2"
                                 x1="26"
                                 y1="15"
                                 x2="8"
@@ -226,7 +226,7 @@
                             </defs>
                             <title>logout_exp</title>
                             <line
-                                class="cls-1"
+                                class="cls-2"
                                 x1="12"
                                 y1="15"
                                 x2="28"
